2023-02-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	[gropdf]: Revise tests to be foundry-focussed.

	* font/devpdf/tests/basic-fonts-present.sh: Stop trying to match
	font descriptions in the "devps" directory with ones in
	"devpdf"; instead, test whether "BuildFoundries" did its job.
	Test for font descriptions corresponding to the full 35
	PostScript Level 2 font repertoire, plus groff's "EURO".
	* font/devpdf/tests/urw-fonts-present.sh: Drop stale comment and
	rename variable for better parallelism with the other test
	above.

	Continues <https://savannah.gnu.org/bugs/?63808>.  Thanks to
	Deri James for the continued discussion.

2023-02-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man]: Tweak fix to Savannah #63768.

	* tmac/an.tmac (MR): Ensure `an*url` always has a value,
	defaulting to "format 1" (man:page(section)).  Resequence the
	macOS URL formats to sort the contemporary one before the
	others.
	* tmac/man.local: Reflect resequencing of integer assignments to
	formats.  Clarify historicity of annotations.

	Continues <https://savannah.gnu.org/bugs/?63768>.  Thanks to
	John Gardner for further discussion.

2023-02-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	[ms]: Port a test to Solaris 11 sed.

	* tmac/tests/s_TC-works-with-percent-in-custom-titles.sh: Put
	newlines after opening braces in sed scripts.  macOS and GNU sed
	tolerate their absence, but this sed does not.
	* HACKING: Document this problem.

2023-02-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.am (groff_TESTS) [!USE_GROHTML]: Don't
	test the 'grohtml' driver if we know it won't work.

2023-02-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/\
	device_control_escapes_express_basic_latin.sh: Use printf(1),
	which is often a shell built-in command, more consistently.
	Double backslashes intended as literals in the format string,
	and single-quote format strings using them.  Fixes test failure